# microhttp-rs

./: .gitignore  About.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: coverage.yml
examples/: basic_server.rs  http_server.rs  simple_parser.rs  simple_server.rs
src/: banner.txt  lib.rs  parser.rs  server.rs
src/parser/: error.rs  method.rs  mod.rs  request.rs  tests.rs  version.rs
src/server/: config.rs  error.rs  handler.rs  http_server.rs  mod.rs  response.rs  tests.rs
